[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-route"
version = "0.20.0"
edition = "2021"

homepage = "https://github.com/rust-netlink/netlink-packet-route"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/netlink-packet-route"
description = "netlink packet types"

[features]
rich_nlas = []

[dependencies]
bitflags = "2"
byteorder = { version = "1", default-features = false }
libc = "0.2.66"
log = "0.4"
netlink-packet-core = { path= "../../crates/netlink-packet-core" }
netlink-packet-utils = { path= "../../crates/netlink-packet-utils" }
axerrno = { path = "../../crates/axerrno" }

[dev-dependencies]
pcap-file = "1.1.1"
netlink-sys = { version = "0.8.5" }
pretty_assertions = "0.7.2"
